feat: harden moderation and event workflows